--- a/src/PiupiuBundle/Resources/views/Default/login.html.twig
+++ b/src/PiupiuBundle/Resources/views/Default/login.html.twig
@@ -1,16 +1,23 @@
 {% extends 'PiupiuBundle:Layout:layout.html.twig' %}
 {% block title %}Login{% endblock title %}
 {% block body %}
-    <form action="{{ path('piupiu_login') }}" method="POST">
-        <label for="exampleInputEmail1">Username</label>
-        <input type="text" name="_username" class="form-control" id="exampleInputEmail1" placeholder="Username">
-        <label for="exampleInputPassword1">Password</label>
-        <input type="password" name="_password" class="form-control"
-               id="exampleInputPassword1" placeholder="Password">
-        <label for="the-answer">The answer to life the universe and everything</label>
-        <input type="text" name="the_answer" class="form-control" id="the-answer">
-        <input type="checkbox" name="terms"> I agree to want to be logged in
-        <button type="submit" class="btn btn-default">Login</button>
+    {{ error }}
+    <form action="{{ path('security_login_check') }}" method="post">
+        {% if error %}
+            <div class="alert alert-danger">
+                {{ error.messageKey|trans(error.messageData) }}
+            </div>
+        {% endif %}
+        <div>
+            <label for="username">{{ 'Username' | trans }}</label>
+            <input type="text" id="username" name="_username" value="{{ last_username }}" />
+        </div>
+        <div>
+            <label for="password">{{ 'Password' | trans }}</label>
+            <input type="password" id="password" name="_password" />
+        </div>
+        <br/>
+        <button type="submit">Login</button>
     </form>
 {% endblock body %}
 {% block script %}
