user fixtures, login almost done. todo: register form

--- a/src/PiupiuBundle/Resources/views/Default/login.html.twig
+++ b/src/PiupiuBundle/Resources/views/Default/login.html.twig
@@ -1,8 +1,7 @@
 {% extends 'PiupiuBundle:Layout:layout.html.twig' %}
 {% block title %}Login{% endblock title %}
 {% block body %}
-    {{ error }}
-    <form action="{{ path('security_login_check') }}" method="post">
+    <form action="{{ path('security_login') }}" method="post">
         {% if error %}
             <div class="alert alert-danger">
                 {{ error.messageKey|trans(error.messageData) }}
