security, login, user and fixtures update

--- a/src/PiupiuBundle/Resources/views/Layout/layout.html.twig
+++ b/src/PiupiuBundle/Resources/views/Layout/layout.html.twig
@@ -6,13 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>OCR - {% block title %}Louvre{% endblock title %}</title>
 
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/css/materialize.min.css">
+
+
+
     <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
 </head>
 <body>
     {% include "PiupiuBundle:Layout:navigation.html.twig" %}
     {% include "PiupiuBundle:Layout:flashbags.html.twig" %}
-    {% block body %}{% endblock body %}
+        {% block body %}{% endblock body %}
     {% include "PiupiuBundle:Layout:footer.html.twig" %}
+
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js"></script>
     {% include "PiupiuBundle:Layout:script.html.twig" %}
     {% block script %}{% endblock script %}
 </body>
