--- a/src/PiupiuBundle/Resources/views/Default/login.html.twig
+++ b/src/PiupiuBundle/Resources/views/Default/login.html.twig
@@ -1,23 +1,23 @@
 {% extends 'PiupiuBundle:Layout:layout.html.twig' %}
 {% block title %}Login{% endblock title %}
 {% block body %}
-    <form action="{{ path('security_login') }}" method="post">
-        {% if error %}
-            <div class="alert alert-danger">
-                {{ error.messageKey|trans(error.messageData) }}
-            </div>
-        {% endif %}
-        <div>
-            <label for="username">{{ 'Username' | trans }}</label>
-            <input type="text" id="username" name="_username" value="{{ last_username }}" />
+    <div class="row">
+        <div class="col s6">
+            <form action="{{ path('security_login') }}" method="post">
+
+                <div>
+                    <label for="username">{{ 'Username' | trans }}</label>
+                    <input type="text" id="username" name="_username" value="{{ last_username }}" />
+                </div>
+                <div>
+                    <label for="password">{{ 'Password' | trans }}</label>
+                    <input type="password" id="password" name="_password" />
+                </div>
+                <br/>
+                <button type="submit">Login</button>
+            </form>
         </div>
-        <div>
-            <label for="password">{{ 'Password' | trans }}</label>
-            <input type="password" id="password" name="_password" />
-        </div>
-        <br/>
-        <button type="submit">Login</button>
-    </form>
+    </div>
 {% endblock body %}
 {% block script %}
 {% endblock script %}
