--- a/src/PiupiuBundle/Resources/views/Default/login.html.twig
+++ b/src/PiupiuBundle/Resources/views/Default/login.html.twig
@@ -4,7 +4,6 @@
     <div class="row">
         <div class="col s6">
             <form action="{{ path('security_login') }}" method="post">
-
                 <div>
                     <label for="username">{{ 'Username' | trans }}</label>
                     <input type="text" id="username" name="_username" value="{{ last_username }}" />
@@ -13,7 +12,7 @@
                     <label for="password">{{ 'Password' | trans }}</label>
                     <input type="password" id="password" name="_password" />
                 </div>
-                <br/>
+                <a href="{{ path('piupiu_pwd_forgot') }}">{{ 'Forgot my password' | trans }}</a>
                 <button type="submit">Login</button>
             </form>
         </div>
