--- a/src/PiupiuBundle/Resources/views/Default/login.html.twig
+++ b/src/PiupiuBundle/Resources/views/Default/login.html.twig
@@ -1,7 +1,7 @@
 {% extends 'PiupiuBundle:Layout:layout.html.twig' %}
 {% block title %}Login{% endblock title %}
 {% block body %}
-    <div class="row">
+    {#<div class="row">
         <div class="col s6">
             <form action="{{ path('security_login') }}" method="post">
                 <div>
@@ -12,9 +12,26 @@
                     <label for="password">{{ 'Password' | trans }}</label>
                     <input type="password" id="password" name="_password" />
                 </div>
-                <a href="{{ path('piupiu_pwd_forgot') }}">{{ 'Forgot my password' | trans }}</a>
+
                 <button type="submit">Login</button>
             </form>
+        </div>
+    </div>#}
+    <div class="row">
+        <div class="col s6">
+            {{ form_start(form, {attr: {novalidate: 'novalidate'}}) }}
+            {{ form_errors(form) }}
+
+            {{ form_row(form.username)}}
+
+            {{ form_row(form.password) }}
+
+            {{ form_row(form.login) }}
+
+            {# rest and end #}
+            {{ form_rest(form) }}
+            {{ form_end(form) }}
+            <a href="{{ path('piupiu_pwd_forgot') }}">{{ 'Forgot my password' | trans }}</a>
         </div>
     </div>
 {% endblock body %}
