--- a/src/PiupiuBundle/Resources/views/Default/pwd_forgot.html.twig
+++ b/src/PiupiuBundle/Resources/views/Default/pwd_forgot.html.twig
@@ -3,13 +3,24 @@
 {% block body %}
     <div class="row">
         <div class="col s6">
-            <form action="{{ path('piupiu_pwd_forgot') }}" method="post">
-                <div>
-                    <label for="email">{{ 'email' | trans }}</label>
-                    <input type="email" id="email" name="_email" value="" />
-                </div>
-                <button type="submit">{{ 'Recover' | trans }}</button>
-            </form>
+            {#<form action="{{ path('piupiu_pwd_forgot') }}" method="post">#}
+                {#<div>#}
+                    {#<label for="email">{{ 'email' | trans }}</label>#}
+                    {#<input type="email" id="email" name="_email" value="" />#}
+                {#</div>#}
+                {#<button type="submit">{{ 'Recover' | trans }}</button>#}
+            {#</form>#}
+            {#{{ form_start(form, {attr: {novalidate: 'novalidate'}}) }}#}
+            {{ form_start(form) }}
+            {{ form_errors(form) }}
+
+            {{ form_row(form.email)}}
+
+            {{ form_row(form.recover) }}
+
+            {# rest and end #}
+            {{ form_rest(form) }}
+            {{ form_end(form) }}
         </div>
     </div>
 {% endblock body %}
