--- a/src/PiupiuBundle/Resources/views/Layout/layout.html.twig
+++ b/src/PiupiuBundle/Resources/views/Layout/layout.html.twig
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>OCR - {% block title %}Louvre{% endblock title %}</title>
+    <title>OCR - {% block title %}PiuPiu{% endblock title %}</title>
 
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/css/materialize.min.css">
