--- a/src/PiupiuBundle/Resources/views/Authentication/change_password.html.twig
+++ b/src/PiupiuBundle/Resources/views/Authentication/change_password.html.twig
@@ -1,6 +1,10 @@
 {% extends 'PiupiuBundle:Layout:layout.html.twig' %}
 {% block title %}Login{% endblock title %}
 {% block body %}
+    <h1>{{ 'Change your Password' | trans }}</h1>
+    {% if first_login %}
+        <p>{{ 'For security reasons, your password has to be changed' | trans }}</p>
+    {% endif %}
     <div class="row">
         <div class="col s6">
             {{ form_start(form, {attr: {novalidate: 'novalidate'}}) }}
@@ -14,7 +18,6 @@
             {# rest and end #}
             {{ form_rest(form) }}
             {{ form_end(form) }}
-            <a href="{{ path('piupiu_pwd_forgot') }}">{{ 'Forgot my password' | trans }}</a>
         </div>
     </div>
 {% endblock body %}
