--- a/src/PiupiuBundle/Resources/views/Layout/script.html.twig
+++ b/src/PiupiuBundle/Resources/views/Layout/script.html.twig
@@ -1,10 +1,3 @@
-{% if error is defined %}
-    {% if error %}
-        <script>Materialize.toast('{{ error.messageKey | trans(error.messageData) }}', 4000, 'rounded')</script>
-    {% endif %}
-{% endif %}
-{% if toast is defined %}
-    {% if toast %}
-        <script>Materialize.toast('{{ toast | trans }}', 4000, 'rounded')</script>
-    {% endif %}
-{% endif %}
+{% for flashMessage in app.session.flashbag.get('toast') %}
+    <script>Materialize.toast('{{ flashMessage | trans }}', 4000, 'rounded')</script>
+{% endfor %}
