--- a/src/PiupiuBundle/Resources/views/Authentication/login.html.twig
+++ b/src/PiupiuBundle/Resources/views/Authentication/login.html.twig
@@ -18,6 +18,7 @@
             {{ form_rest(form) }}
             {{ form_end(form) }}
             <a href="{{ path('piupiu_pwd_forgot') }}">{{ 'Forgot my password' | trans }}</a>
+            <a href="{{ path('piupiu_pwd_forgot') }}">{{ 'Sign up' | trans }}</a>
         </div>
     </div>
 {% endblock body %}
