--- a/src/PiupiuBundle/Resources/views/Authentication/login.html.twig
+++ b/src/PiupiuBundle/Resources/views/Authentication/login.html.twig
@@ -1,6 +1,7 @@
 {% extends 'PiupiuBundle:Layout:layout.html.twig' %}
 {% block title %}Login{% endblock title %}
 {% block body %}
+    <h1>{{ 'Sign in' | trans }}</h1>
     <div class="row">
         <div class="col s6">
             {{ form_start(form, {attr: {novalidate: 'novalidate'}}) }}
