--- a/src/PiupiuBundle/Resources/views/Authentication/register.html.twig
+++ b/src/PiupiuBundle/Resources/views/Authentication/register.html.twig
@@ -1,6 +1,7 @@
 {% extends 'PiupiuBundle:Layout:layout.html.twig' %}
 {% block title %}Register{% endblock title %}
 {% block body %}
+    <h1>{{ 'Register' | trans }}</h1>
     <div class="row">
         <div class="col s6">
             {{ form(form) }}
