--- a/src/PiupiuBundle/Resources/views/Layout/script.html.twig
+++ b/src/PiupiuBundle/Resources/views/Layout/script.html.twig
@@ -1,3 +1,10 @@
 {% for flashMessage in app.session.flashbag.get('toast') %}
     <script>Materialize.toast('{{ flashMessage | trans }}', 4000, 'rounded')</script>
 {% endfor %}
+
+{# needed for the select dropdown to be shown #}
+<script>
+    $(document).ready(function () {
+        $('select').material_select();
+    })
+</script>
